--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container mt-4">
-  <div class="row">
-    <div class="col-lg-8 offset-lg-2">
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
       <%= render "form", activity: @activity %>
     </div>
   </div>
